--- a/recipes/double-stuffed-chicken.html
+++ b/recipes/double-stuffed-chicken.html
@@ -9,6 +9,7 @@
   <body>
     <a href="../index.html">Index</a>
     <h1>Double Stuffed Chicken</h1>
+    <img src="../img/double-stuffed-chicken.jpeg" alt="Chicken breasts covered in bread crumbs and Romano cheese" width="225">
   </body>
 
 </html>
