--- a/recipes/figs-almonds-brie.html
+++ b/recipes/figs-almonds-brie.html
@@ -9,6 +9,7 @@
   <body>
     <a href="../index.html">Index</a>
     <h1>Figs and Toasted Almonds Brie</h1>
+    <img src="../img/figs-brie.jpeg" alt="Brie topped with figs and toasted almonds" width="225">
   </body>
   
 </html>
