--- a/recipes/tikka-masala.html
+++ b/recipes/tikka-masala.html
@@ -9,6 +9,7 @@
   <body>
     <a href="../index.html">Index</a>
     <h1>Indian Chicken Tikka Masala</h1>
+    <img src="../img/tikka-masala.jpg" alt="Indian chicken tikka masala with rice and naan bread on the side" width="225">
   </body>
   
 </html>
