Add description and fix spelling mistakes

--- a/recipes/double-stuffed-chicken.html
+++ b/recipes/double-stuffed-chicken.html
@@ -9,7 +9,9 @@
   <body>
     <a href="../index.html">Index</a>
     <h1>Double Stuffed Chicken</h1>
-    <img src="../img/double-stuffed-chicken.jpeg" alt="Chicken breasts covered in bread crumbs and Romano cheese" width="225">
+    <img src="../img/double-stuffed-chicken.jpeg" alt="Chicken breasts coated with breadcrumbs and Romano cheese" width="225">
+    <h3>Description</h3>
+    <p>Chicken breasts stuffed with Cheddar and cream cheeses, drenched with a garlic-lemon-butter sauce and coated with breadcrumbs and Romano cheese.</p>
   </body>
 
 </html>
