--- a/recipes/figs-almonds-brie.html
+++ b/recipes/figs-almonds-brie.html
@@ -10,6 +10,8 @@
     <a href="../index.html">Index</a>
     <h1>Figs and Toasted Almonds Brie</h1>
     <img src="../img/figs-brie.jpeg" alt="Brie topped with figs and toasted almonds" width="225">
+    <h3>Description</h3>
+    <p>Brie baked with figs and toasted almonds, a great appetizer for holidays.</p>
   </body>
   
 </html>
