--- a/recipes/tikka-masala.html
+++ b/recipes/tikka-masala.html
@@ -10,6 +10,8 @@
     <a href="../index.html">Index</a>
     <h1>Indian Chicken Tikka Masala</h1>
     <img src="../img/tikka-masala.jpg" alt="Indian chicken tikka masala with rice and naan bread on the side" width="225">
+    <h3>Description</h3>
+    <p>Indian chicken tikka masala, best served with naan bread and mango chutney, garnished with cilantro leaves.</p>
   </body>
   
 </html>
