Add ingredients lists

--- a/recipes/double-stuffed-chicken.html
+++ b/recipes/double-stuffed-chicken.html
@@ -12,6 +12,22 @@
     <img src="../img/double-stuffed-chicken.jpeg" alt="Chicken breasts coated with breadcrumbs and Romano cheese" width="225">
     <h3>Description</h3>
     <p>Chicken breasts stuffed with Cheddar and cream cheeses, drenched with a garlic-lemon-butter sauce and coated with breadcrumbs and Romano cheese.</p>
+    <h3>Ingredients (8 servings)</h3>
+    <ul>
+       <li>oil, for greasing pan</li>
+       <li>8 boneless, skinless chicken breast halves</li>
+       <li>1 (8 ounce) package cream cheese, cut into ½ inch slices</li>
+       <li>1 (8 ounce) package Cheddar cheese, cut into ½ inch slices</li>
+       <li>1 cup milk</li>
+       <li>1 ½ cups Italian seasoned bread crumbs</li>
+       <li>½ cup grated Romano cheese</li>
+       <li>1 tablespoon minced garlic</li>
+       <li>¾ cup butter, melted</li>
+       <li>2 tablespoons lemon juice</li>
+       <li>½ teaspoon garlic salt, or to taste</li>
+       <li>½ teaspoon paprika (optional)</li>
+    </ul>
+
   </body>
 
 </html>
