--- a/recipes/figs-almonds-brie.html
+++ b/recipes/figs-almonds-brie.html
@@ -12,6 +12,16 @@
     <img src="../img/figs-brie.jpeg" alt="Brie topped with figs and toasted almonds" width="225">
     <h3>Description</h3>
     <p>Brie baked with figs and toasted almonds, a great appetizer for holidays.</p>
+    <h3>Ingredients (12 servings)</h3>
+    <ul>
+      <li>½ cup brown sugar</li>
+      <li>2 tablespoons water</li>
+      <li>6 fresh figs, stemmed and quartered</li>
+      <li>1 (14 ounce) round 4 ¼-inch diameter round Brie cheese</li>
+      <li>½ cup toasted almonds</li>
+      <li>½ teaspoon vanilla extract</li>
+    </ul>
+
   </body>
   
 </html>
