--- a/recipes/tikka-masala.html
+++ b/recipes/tikka-masala.html
@@ -12,6 +12,22 @@
     <img src="../img/tikka-masala.jpg" alt="Indian chicken tikka masala with rice and naan bread on the side" width="225">
     <h3>Description</h3>
     <p>Indian chicken tikka masala, best served with naan bread and mango chutney, garnished with cilantro leaves.</p>
+    <h3>Ingredients (4 servings)</h3>
+    <ul>
+      <li>1 (14.5 ounce) can chopped tomatoes</li>
+      <li>4 tablespoons plain yogurt</li>
+      <li>2 cloves garlic, roughly chopped</li>
+      <li>1 (1 inch) piece ginger, coarsely chopped</li>
+      <li>2 tablespoons vegetable oil</li>
+      <li>1 onion, chopped</li>
+      <li>2 tablespoons masala curry paste</li>
+      <li>4 skinless, boneless chicken breasts, cut into 1-inch pieces</li>
+      <li>salt and freshly ground black pepper to taste</li>
+      <li>¼ cup water</li>
+      <li>1 tablespoon all-purpose flour</li>
+      <li>3 tablespoons chopped fresh cilantro</li>
+    </ul>
+
   </body>
   
 </html>
