--- a/recipes/double-stuffed-chicken.html
+++ b/recipes/double-stuffed-chicken.html
@@ -27,6 +27,14 @@
        <li>½ teaspoon garlic salt, or to taste</li>
        <li>½ teaspoon paprika (optional)</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Preheat oven to 350 degrees F (175 degrees C). Lightly coat a large, shallow baking dish with oil.</li>
+      <li>Butterfly each breast by slicing in half horizontally through the center, cutting almost but not completely through. Place one slice each of Cheddar and cream cheese in the center of each breast. Close again as if placing between the pages of a book. Set aside.</li>
+      <li>Pour milk into a shallow bowl. In a separate bowl, combine breadcrumbs and Romano cheese. Carefully dip each breast first in milk, then in breadcrumb mixture, patting lightly to firmly coat. Place breasts side by side in a single layer in pre-oiled baking dish, tucking edges under to seal.</li>
+      <li>Melt butter in a small saucepan over medium heat. Stir in lemon juice and garlic, and drizzle evenly over chicken. Season breasts with garlic salt and paprika, if using.</li>
+      <li>Bake in preheated oven for 30 minutes, or until no longer pink in center and juices run clear.</li>
+    </ol>
 
   </body>
 
