--- a/recipes/figs-almonds-brie.html
+++ b/recipes/figs-almonds-brie.html
@@ -21,6 +21,12 @@
       <li>½ cup toasted almonds</li>
       <li>½ teaspoon vanilla extract</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Preheat oven to 325 degrees F (165 C).</li>
+      <li>Heat brown sugar and water in a small saucepan over medium heat until sugar is completely dissolved. Add figs and vanilla, and cook until softened, about 10 minutes. Stir in almonds and vanilla. Place brie wheel in a baking dish, and pour fig mixture over the top.</li>
+      <li>Bake in the preheated oven for 10 to 15 minutes, or until softened but not melted. Serve with water crackers.</li>
+    </ol>
 
   </body>
   
